# lect

./: CMakeLists.txt  README.md  flake.nix
.github/workflows/: release.yml
annotations/: checker.an  domains.an  example1.an  examplea.an  examplec.an  export.an  extract.an  language.an  main.an  settings.an
annotations/configuration/: building-language.an  capture-validator.an  configuration.an  instantiating-configuration.an  language-builder.an  language-placeholder.an  language-validator.an  language.an  settings-builder.an  settings.an
annotations/dir/: example2.an  exampleb.an
annotations/extract/: annotations-builder.an  building-annotations.an  extract.an
annotations/patterns/: builder.an  chain-of-responsibility.an  domain-model.an  domain-object.an  null-object.an  pipes-and-filters.an  strategy.an  template-method.an
annotations/preprocessing/: building-preprocessing.an  preprocessing-builder.an  preprocessing.an
annotations/validation/: checker.an  validation.an
res/: filestringtemp.hpp  index.html  script.js
src/: main.cpp
src/lect/: annotations.hpp  checks.hpp  export.hpp  extract.hpp  preprocessing.hpp  settings.hpp  structures.hpp
